fix(core/text-field): override padding-right to micro for tiny-gap variant
When --tiny-gap is applied (currency + spinner), the suffix padding-right
should be micro instead of the default cozy.

Ref: #86ewv14ke

--- a/packages/core/src/text-field/_text-field-styles.scss
+++ b/packages/core/src/text-field/_text-field-styles.scss
@@ -261,6 +261,10 @@ $size-configs: (
 
   &--tiny-gap {
     gap: spacing.semantic-variable(padding, horizontal, tiny);
+
+    &:has(.#{$prefix}__suffix) {
+      padding-right: spacing.semantic-variable(padding, horizontal, micro);
+    }
   }
 
   &--full-width {
